# OlaForge

./: ARCHITECTURE.md  DEVELOP.md  README.md  README_zh.md  package.json
core/: .gitignore  Cargo.toml  README.md  RELEASE.md  install.sh
core/docs/: ADVANCED_FEATURES.md  API.md  CLAUDE_CODE_INTEGRATION.md  CODE_REVIEW.md  EXPERT_CODE_REVIEW.md  FEATURE_COVERAGE.md  REVIEW.md
core/sdk/: README.md
core/sdk/javascript/: package.json
core/sdk/javascript/src/: index.d.ts  index.js
core/sdk/python/: setup.py
core/sdk/python/olaforge/: __init__.py  cli.py
core/src/: main.rs
core/src/olaforge-cli/: Cargo.toml
core/src/olaforge-cli/src/: audit_cmd.rs  chat.rs  config.rs  docker.rs  logging.rs  main.rs  main_tests.rs  mcp.rs  sandbox.rs  sandbox_tests.rs  skill.rs  templates.rs  validator.rs  webui.rs
core/src/olaforge-core/: Cargo.toml
core/src/olaforge-core/src/: artifact_store.rs  audit_preview_redact.rs  env_spec.rs  error.rs  lib.rs  observability.rs  path_validation.rs  paths.rs  planning.rs  protocol.rs  scan_cache.rs  schedule.rs
core/src/olaforge-core/src/config/: env_keys.rs  loader.rs  mod.rs  schema.rs
core/src/olaforge-core/src/skill/: denylist.rs  dependency_resolver.rs  deps.rs  discovery.rs  manifest.rs  metadata.rs  mod.rs  openclaw_metadata.rs  schema.rs  skill_md_security.rs  trust.rs
core/src/olaforge-evolution/: Cargo.toml
core/src/olaforge-evolution/src/: audit.rs  changelog.rs  config.rs  error.rs  evolution_memory_rollup.rs  external_learner.rs  feedback.rs  gatekeeper.rs  growth_schedule.rs  lib.rs  lifecycle.rs  llm.rs  memory_learner.rs  prompt_learner.rs  rollback.rs  run.rs  run_state.rs  scope.rs  shallow_preflight.rs  snapshots.rs
core/src/olaforge-evolution/src/seed/: examples.seed.md  execution.seed.md  mod.rs  planning.seed.md  rules.seed.json  sources.seed.json  system.seed.md
core/src/olaforge-evolution/src/seed/evolution_prompts/: example_generation.seed.md  external_knowledge.seed.md  memory_knowledge_extraction.seed.md  rule_extraction.seed.md  skill_execution_inference.seed.md  skill_generation.seed.md  skill_generation_from_failures.seed.md  skill_refinement.seed.md
core/src/olaforge-evolution/src/skill_synth/: env_helper.rs  generate.rs  infer.rs  mod.rs  parse.rs  query.rs  refine.rs  repair.rs  scan.rs  validate.rs
core/src/olaforge-executor/: Cargo.toml
core/src/olaforge-executor/src/: error.rs  lib.rs  memory.rs  plan.rs  rpc.rs  session.rs  transcript.rs
core/src/olaforge-fs/: Cargo.toml
core/src/olaforge-fs/src/: backup.rs  dir.rs  error.rs  grep.rs  lib.rs  read_write.rs  search_replace.rs  util.rs
core/src/olaforge-sandbox/: Cargo.toml
core/src/olaforge-sandbox/examples/: native_sandbox_microbench.rs
core/src/olaforge-sandbox/src/: bash_validator.rs  common.rs  error.rs  lib.rs  linux.rs  log.rs  macos.rs  mod.rs  move_protection.rs  runner.rs  runtime_resolver.rs  sandbox_backend.rs  seatbelt.rs  seccomp.rs  windows.rs
core/src/olaforge-sandbox/src/env/: builder.rs  mod.rs  runtime_deps.rs
core/src/olaforge-sandbox/src/network_proxy/: config.rs  dns.rs  http.rs  manager.rs  mod.rs  socks5.rs  tests.rs  tunnel.rs
core/src/olaforge-sandbox/src/security/: default_rules.rs  default_rules.yaml  malicious_packages.rs  mod.rs  policy.rs  rules.rs  scanner.rs  skill_precheck.rs  types.rs
core/src/olaforge-sandbox/src/security/dependency_audit/: audit.rs  backends.rs  config.rs  format.rs  mod.rs  parsers.rs  resolve.rs  tests.rs  types.rs
core/vscode/: README.md  package.json  tsconfig.json
core/vscode/src/: extension.ts
docs/: API_SPEC.md  SDK_REFERENCE.md
src/api/: status.ts
src/cli/: index.ts
src/cli/commands/: chat.ts  config.ts  init.ts  run.ts  skill.ts  status.ts
src/config/: manager.ts  project.ts
src/evolution/: skill.ts
src/sandbox/: executor.ts
