[package]
name = "olaforge-cli"
version = "1.2.0"
edition = "2021"
description = "OlaForge CLI - 安全沙箱执行引擎"
authors = ["OlaForge Team"]
license = "MIT"

[[bin]]
name = "olaforge"
path = "src/main.rs"

[dependencies]
olaforge-core = { path = "../olaforge-core" }
olaforge-fs = { path = "../olaforge-fs" }
olaforge-executor = { path = "../olaforge-executor" }
olaforge-sandbox = { path = "../olaforge-sandbox", features = ["audit"] }
olaforge-evolution = { path = "../olaforge-evolution" }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
lazy_static = "1.4"