[package]
name = "olaforge-executor"
version = "1.0.0"
edition = "2021"
authors = ["OlaForge Team"]
license = "MIT"
repository = "https://github.com/zyzheal/OlaForge"
homepage = "https://github.com/zyzheal/OlaForge"
description = "Agent execution runtime — session management, conversation transcript, persistent memory with SQLite"
keywords = ["agent", "session", "memory", "transcript", "executor"]
categories = ["development-tools"]

[features]
default = []
memory_vector = ["dep:sqlite-vec", "dep:zerocopy"]

[dependencies]
olaforge-core = { path = "../olaforge-core",  }
olaforge-fs = { path = "../olaforge-fs",  }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# memory_vector feature
sqlite-vec = { version = "0.1", optional = true }
zerocopy = { version = "0.7", optional = true }
