[package]
name = "olaforge-sandbox"
version = "1.0.0"
edition = "2021"
authors = ["OlaForge Team"]
license = "MIT"
repository = "https://github.com/zyzheal/OlaForge"
homepage = "https://github.com/zyzheal/OlaForge"
description = "OS-native secure sandbox for AI agent skill execution — Seatbelt (macOS), seccomp (Linux), Job Objects (Windows)"
keywords = ["sandbox", "security", "isolation", "seatbelt", "seccomp"]
categories = ["os", "development-tools"]

[features]
default = ["runtime-deps"]
audit = ["dep:ureq"]
# P0: 运行时依赖 — 优先用系统 Python/Node，系统没有则首次供给到 ~/.OlaForge/runtime/
runtime-deps = ["dep:ureq"]

[dependencies]
olaforge-core = { path = "../olaforge-core",  }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.10"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
unicode-normalization = "0.1"
flate2 = "1.0"
tar = "0.4.45"
which = "6.0"

# Audit + runtime-deps: sync HTTP for OSV and runtime dependency provisioning
ureq = { version = "2", optional = true, features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "signal"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_Foundation",
] }
